first plot works

--- a/website/reference.bib
+++ b/website/reference.bib
@@ -11,3 +11,27 @@
   url={https://www.nps.gov/nabr/index.htm},
   date={2024-04-25}
 } 
+@online{no_trace,
+  title =  {Leave No Trace Seven Principles},
+  author = {National Park Service},
+  url={https://www.nps.gov/articles/leave-no-trace-seven-principles.htm},
+  date={2022-05-16}
+}
+@online{npca,
+  title = {Plan a Desert Getaway to Natural Bridges},
+  author = {National Parks Conservation Association},
+  url = {https://www.npca.org/articles/406-plan-a-desert-getaway-to-natural-bridges},
+  date = {2014-11-13}
+}
+@online{meta,
+  title = {Climate and drought adaptation: historical and projected future exposure metrics for Southeastern Utah Group National Parks},
+  author = {U.S. Geological Survey},
+  url = {https://www.sciencebase.gov/catalog/file/get/61a6952fd34eb622f6978d9f?f=__disk__78%2F99%2F9b%2F78999b749568b2fbba86ce5dc9fc89aebe469388&transform=1&allowOpen=true},
+  date = {2022-03-02}
+}
+@online{soil,
+  title = {SOILWAT2},
+  author = {Dryland Ecology},
+  url = {https://github.com/DrylandEcology/SOILWAT2},
+  date = {2023-10-24}
+}
