--- a/website/index.ipynb
+++ b/website/index.ipynb
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -103,9 +103,9 @@
         {
           "data": {
             "text/html": [
-              "<div>                            <div id=\"4644cd56-7695-4a39-8c66-10c4b16c2ffb\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>            <script type=\"text/javascript\">                require([\"plotly\"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById(\"4644cd56-7695-4a39-8c66-10c4b16c2ffb\")) {                    Plotly.newPlot(                        \"4644cd56-7695-4a39-8c66-10c4b16c2ffb\",                        [{\"domain\":{\"x\":[0.0,1.0],\"y\":[0.0,1.0]},\"hovertemplate\":\"col=%{label}\\u003cbr\\u003emean=%{value}\\u003cextra\\u003e\\u003c\\u002fextra\\u003e\",\"labels\":[\"treecanopy\",\"Ann_Herb\",\"Bare\",\"Herb\",\"Litter\",\"Shrub\"],\"legendgroup\":\"\",\"name\":\"\",\"showlegend\":true,\"values\":[9.68141592920354,0.23008849557522124,56.6283185840708,9.513274336283185,11.725663716814159,15.353982300884956],\"type\":\"pie\"}],                        {\"template\":{\"data\":{\"scatter\":[{\"type\":\"scatter\"}]}},\"legend\":{\"tracegroupgap\":0},\"title\":{\"text\":\"Ground Cover Percentage By Type\"}},                        {\"responsive\": true}                    ).then(function(){\n",
+              "<div>                            <div id=\"7e40003b-ce61-4a1f-bab7-cfa56f0cfbb6\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>            <script type=\"text/javascript\">                require([\"plotly\"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById(\"7e40003b-ce61-4a1f-bab7-cfa56f0cfbb6\")) {                    Plotly.newPlot(                        \"7e40003b-ce61-4a1f-bab7-cfa56f0cfbb6\",                        [{\"domain\":{\"x\":[0.0,1.0],\"y\":[0.0,1.0]},\"hovertemplate\":\"Ground Cover Type=%{label}\\u003cbr\\u003eMean Coverage=%{value}\\u003cextra\\u003e\\u003c\\u002fextra\\u003e\",\"labels\":[\"Tree Canopy\",\"Annual Herbaceous\",\"Bare Ground\",\"Herbaceous\",\"Plant Litter\",\"Shrub\"],\"legendgroup\":\"\",\"name\":\"\",\"showlegend\":true,\"values\":[9.68141592920354,0.23008849557522124,56.6283185840708,9.513274336283185,11.725663716814159,15.353982300884956],\"type\":\"pie\"}],                        {\"template\":{\"data\":{\"scatter\":[{\"type\":\"scatter\"}]}},\"legend\":{\"tracegroupgap\":0},\"title\":{\"text\":\"Ground Cover Percentage By Type\"}},                        {\"responsive\": true}                    ).then(function(){\n",
               "                            \n",
-              "var gd = document.getElementById('4644cd56-7695-4a39-8c66-10c4b16c2ffb');\n",
+              "var gd = document.getElementById('7e40003b-ce61-4a1f-bab7-cfa56f0cfbb6');\n",
               "var x = new MutationObserver(function (mutations, observer) {{\n",
               "        var display = window.getComputedStyle(gd).display;\n",
               "        if (!display || display === 'none') {{\n",
@@ -139,17 +139,24 @@
         "#ground coverage plot\n",
         "# filter out unused rows\n",
         "plot_df = df[(df['TimePeriod'] == 'Hist') & (df['year'] == 1980)]\n",
-        "#keep cols\n",
-        "plot_df = plot_df[['treecanopy', 'Ann_Herb', 'Bare', 'Herb', 'Litter', 'Shrub']]\n",
+        "#keep cols and rename them\n",
+        "plot_df = plot_df[['treecanopy', 'Ann_Herb', 'Bare', 'Herb', 'Litter', 'Shrub']].rename(columns={\n",
+        "    'treecanopy': 'Tree Canopy',\n",
+        "    'Ann_Herb': 'Annual Herbaceous',\n",
+        "    'Bare': 'Bare Ground',\n",
+        "    'Herb': 'Herbaceous',\n",
+        "    'Litter': 'Plant Litter',\n",
+        "    'Shrub': 'Shrub'\n",
+        "})\n",
         "#calc means\n",
         "df_means = plot_df.mean()\n",
         "#create new df to plot\n",
-        "plot_df = pd.DataFrame({'col': df_means.index, 'mean': df_means.values})\n",
+        "plot_df = pd.DataFrame({'Ground Cover Type': df_means.index, 'Mean Coverage': df_means.values})\n",
         "plot_df.head(6)\n",
         "#plot\n",
         "fig = px.pie(plot_df,\n",
-        "             values= 'mean',\n",
-        "             names= 'col',\n",
+        "             values= 'Mean Coverage',\n",
+        "             names= 'Ground Cover Type',\n",
         "             title=\"Ground Cover Percentage By Type\")\n",
         "#print figure\n",
         "fig.show()"
@@ -159,14 +166,87 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Soil Composition\n",
         "\n",
+        "The visualization below shows the mean percentage of solid composition at each site. The data collected only includes sand, clay, and rock fragments. Since more than these three categories make up the soil composition, the total does not add up to 100 percent. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>                            <div id=\"0e84f635-f3b4-4f6d-983a-89ad6e3ef358\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>            <script type=\"text/javascript\">                require([\"plotly\"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById(\"0e84f635-f3b4-4f6d-983a-89ad6e3ef358\")) {                    Plotly.newPlot(                        \"0e84f635-f3b4-4f6d-983a-89ad6e3ef358\",                        [{\"alignmentgroup\":\"True\",\"hovertemplate\":\"Ground Cover Type=%{x}\\u003cbr\\u003eMean Composition=%{y}\\u003cextra\\u003e\\u003c\\u002fextra\\u003e\",\"legendgroup\":\"\",\"marker\":{\"color\":\"#1F77B4\",\"pattern\":{\"shape\":\"\"}},\"name\":\"\",\"offsetgroup\":\"\",\"orientation\":\"v\",\"showlegend\":false,\"textposition\":\"auto\",\"x\":[\"Sand\",\"Clay\",\"Rock Fragment\"],\"xaxis\":\"x\",\"y\":[68.92314097345132,10.045003185840708,2.5408196371681417],\"yaxis\":\"y\",\"type\":\"bar\"}],                        {\"template\":{\"data\":{\"scatter\":[{\"type\":\"scatter\"}]}},\"xaxis\":{\"anchor\":\"y\",\"domain\":[0.0,1.0],\"title\":{\"text\":\"Ground Cover Type\"}},\"yaxis\":{\"anchor\":\"x\",\"domain\":[0.0,1.0],\"title\":{\"text\":\"Mean Composition\"}},\"legend\":{\"tracegroupgap\":0},\"title\":{\"text\":\"Ground Cover Percentage By Type\"},\"barmode\":\"relative\"},                        {\"responsive\": true}                    ).then(function(){\n",
+              "                            \n",
+              "var gd = document.getElementById('0e84f635-f3b4-4f6d-983a-89ad6e3ef358');\n",
+              "var x = new MutationObserver(function (mutations, observer) {{\n",
+              "        var display = window.getComputedStyle(gd).display;\n",
+              "        if (!display || display === 'none') {{\n",
+              "            console.log([gd, 'removed!']);\n",
+              "            Plotly.purge(gd);\n",
+              "            observer.disconnect();\n",
+              "        }}\n",
+              "}});\n",
+              "\n",
+              "// Listen for the removal of the full notebook cells\n",
+              "var notebookContainer = gd.closest('#notebook-container');\n",
+              "if (notebookContainer) {{\n",
+              "    x.observe(notebookContainer, {childList: true});\n",
+              "}}\n",
+              "\n",
+              "// Listen for the clearing of the current output cell\n",
+              "var outputEl = gd.closest('.output');\n",
+              "if (outputEl) {{\n",
+              "    x.observe(outputEl, {childList: true});\n",
+              "}}\n",
+              "\n",
+              "                        })                };                });            </script>        </div>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "#| echo: false\n",
+        "#soil comp plot\n",
+        "# filter out unused rows\n",
+        "plot_df = df[(df['TimePeriod'] == 'Hist') & (df['year'] == 1980)]\n",
+        "#keep cols and rename them\n",
+        "plot_df = plot_df[['Sa', 'Cl', 'RF']].rename(columns={\n",
+        "    'Sa': 'Sand',\n",
+        "    'Cl': 'Clay',\n",
+        "    'RF': 'Rock Fragment'\n",
+        "})\n",
+        "#calc means\n",
+        "df_means = plot_df.mean()\n",
+        "#create new df to plot\n",
+        "plot_df = pd.DataFrame({'Ground Cover Type': df_means.index, 'Mean Composition': df_means.values})\n",
+        "#plot\n",
+        "fig = px.bar(plot_df,\n",
+        "             x='Ground Cover Type',\n",
+        "             y='Mean Composition',\n",
+        "             title=\"Ground Cover Percentage By Type\")\n",
         "\n",
-        "## Soil\n",
-        "    Sa - Sand\n",
-        "    Cl - Clay\n",
-        "    RF - Rock Fragment\n",
-        "\n",
+        "# Show figure\n",
+        "fig.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Slope\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "\n",
         "# Temperature\n",
         "\n",
