--- a/website/future.ipynb
+++ b/website/future.ipynb
@@ -22,16 +22,9 @@
     "\n",
     "leave no trace and how we are now effecting park even when we are not in them\n",
     "\n",
-    "## explain RCP\n",
+    "# Predicted Data\n",
     "\n",
-    "## Explain Scenarios"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Litter"
+    "# Precipitation"
    ]
   },
   {
@@ -40,14 +33,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# graph showing "
+    "# annual rain fall"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Temperature"
+    "# soil water"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# seasonal swa50"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# temperature"
    ]
   },
   {
@@ -69,11 +78,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusion"
+   ]
   }
  ],
  "metadata": {
