temp plots complete

--- a/code/eda.ipynb
+++ b/code/eda.ipynb
@@ -25360,6 +25360,21 @@
     "print(\"elevation max:\", df['El'].max())\n",
     "print(\"elevation min:\", df['El'].min())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%R\n",
+    "#test hist vs near term\n",
+    "print(\"Welch's T-Test: Historical vs Near Term Data\")\n",
+    "print(t.test(hist$T_Annual, nt$Tmax_Summer, alternative = \"two.sided\"))\n",
+    "#test hist vs lt\n",
+    "print(\"Welch's T-Test: Historical vs Long Term Data\")\n",
+    "print(t.test(hist$T_Annual, lt$Tmax_Summer, alternative = \"two.sided\"))"
+   ]
   }
  ],
  "metadata": {
