added comments to EDA

--- a/code/data_cleaning.ipynb
+++ b/code/data_cleaning.ipynb
@@ -71,13 +71,14 @@
     }
    ],
    "source": [
-    "column_name = 'scenario'\n",
+    "#block used to find unique values\n",
+    "col_name = 'scenario'\n",
     "\n",
     "# Get unique values in the specified column\n",
-    "unique_values = df[column_name].unique()\n",
+    "unique_values = df[col_name].unique()\n",
     "\n",
     "# Print unique values\n",
-    "print(\"Unique values in column '{}':\".format(column_name))\n",
+    "print(\"Unique values in column '{}':\".format(col_name))\n",
     "print(unique_values)"
    ]
   },
