--- a/code/eda.ipynb
+++ b/code/eda.ipynb
@@ -136,10 +136,11 @@
     }
    ],
    "source": [
-    "unique_values_per_column = df.nunique()\n",
+    "# Find number of unique values per col\n",
+    "unique_col = df.nunique()\n",
     "\n",
     "print(\"Number of unique values per column:\")\n",
-    "print(unique_values_per_column)"
+    "print(unique_col)"
    ]
   },
   {
@@ -1604,6 +1605,13 @@
    "source": [
     "#show dtypes\n",
     "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Show description oh the DF and multiple versions filtering on time period"
    ]
   },
   {
@@ -25330,6 +25338,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#find min/max long, lat, and elevation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
@@ -25359,21 +25374,6 @@
     "print(\"lat min:\", df['lat'].min())\n",
     "print(\"elevation max:\", df['El'].max())\n",
     "print(\"elevation min:\", df['El'].min())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%R\n",
-    "#test hist vs near term\n",
-    "print(\"Welch's T-Test: Historical vs Near Term Data\")\n",
-    "print(t.test(hist$T_Annual, nt$Tmax_Summer, alternative = \"two.sided\"))\n",
-    "#test hist vs lt\n",
-    "print(\"Welch's T-Test: Historical vs Long Term Data\")\n",
-    "print(t.test(hist$T_Annual, lt$Tmax_Summer, alternative = \"two.sided\"))"
    ]
   }
  ],
